--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                          <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-transparent via-amber-500 to-transparent opacity-50"></div>
                          <h3 class="text-amber-400 font-bold tracking-widest uppercase mb-4 text-sm md:text-base">Total Neutering Cases</h3>
                          <div class="text-6xl md:text-8xl font-serif font-bold text-white mb-6 tracking-tight flex justify-center items-start gap-2">
-                             <span class="counter-value" data-target="30">0</span>
+                             <span class="counter-value" data-target="25483">0</span>
                              <span class="text-amber-500 text-4xl md:text-6xl mt-2">+</span>
                          </div>
                          <p class="text-slate-300 text-lg md:text-xl font-light">
@@ -399,7 +399,7 @@
                             <img src="director.jpg" 
                                  alt="문현철 원장" 
                                  class="absolute inset-0 w-full h-full object-cover object-top transition-all duration-700" />
-                            <div class="absolute inset-0 bg-gradient-to-t from-slate-900/60 to-transparent md:bg-none"></div>
+                            <div class="absolute bottom-0 left-0 right-0 h-3/5 bg-gradient-to-t from-slate-900/90 to-transparent md:hidden"></div>
                             <div class="absolute bottom-6 left-6 text-white md:hidden">
                                 <p class="text-sm tracking-widest uppercase opacity-80 mb-1">Director</p>
                                 <h3 class="text-2xl font-bold">문 현 철 원장</h3>
@@ -736,7 +736,43 @@
       });
 
       // Stats Counter Animation
-      // ... (existing code for stats) ...
+      const heroStat = document.getElementById('hero-stat');
+      
+      const animateCounter = (el) => {
+          const target = +el.getAttribute('data-target');
+          const duration = 2000; 
+          const increment = target / (duration / 16); 
+          let current = 0;
+
+          const timer = setInterval(() => {
+              current += increment;
+              if (current >= target) {
+                  el.innerText = target.toLocaleString();
+                  clearInterval(timer);
+              } else {
+                  el.innerText = Math.ceil(current).toLocaleString();
+              }
+          }, 16);
+      };
+
+      const observerOptions = { threshold: 0.2 };
+      const observer = new IntersectionObserver((entries, observer) => {
+          entries.forEach(entry => {
+              if (entry.isIntersecting) {
+                  // Show the card
+                  entry.target.classList.remove('opacity-0', 'translate-y-10');
+                  
+                  // Animate numbers
+                  const counters = entry.target.querySelectorAll('.counter-value');
+                  counters.forEach(counter => animateCounter(counter));
+
+                  observer.unobserve(entry.target);
+              }
+          });
+      }, observerOptions);
+
+      if (heroStat) observer.observe(heroStat);
+
       // Set Current Date
       const dateElement = document.getElementById('current-date');
       if (dateElement) {
