--- a/neutering-photos.html
+++ b/neutering-photos.html
@@ -26,7 +26,7 @@
                             <div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100">
                                 <a href="index.html#greetings" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">인사말</a>
                                 <a href="clinic-hours.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">진료시간안내</a>
-                                <a href="index.html#contact" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">찾아오시는길</a>
+                                <a href="location.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">찾아오시는길</a>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                     <div id="mobile-about-menu" class="hidden bg-slate-50 border-y border-slate-100">
                         <a href="index.html#greetings" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">인사말</a>
                         <a href="clinic-hours.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">진료시간안내</a>
-                        <a href="index.html#contact" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">찾아오시는길</a>
+                        <a href="location.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">찾아오시는길</a>
                     </div>
                 </div>
                 <a href="pricing.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">진료비안내</a>
@@ -117,42 +117,58 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-16">
                     <span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Cases</span>
-                    <h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">수술 후 <span class="text-amber-700">사진</span></h2>
+                    <h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">중성화 수술 후 <span class="text-amber-700">사진</span></h2>
                     <p class="text-slate-600 max-w-2xl mx-auto">최소 절개로 흉터가 거의 남지 않는 깔끔한 수술 결과를 확인하세요.</p>
                 </div>
                 
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+                <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
                     <!-- Photo 1 -->
-                    <div class="relative group overflow-hidden rounded-lg aspect-square bg-slate-100">
-                        <img src="https://picsum.photos/400/400?random=10" alt="수술 사례 1" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                        <div class="absolute inset-0 bg-black/50 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center text-white text-sm font-medium">
-                            수컷 포메라니안 (2kg)
+                    <div class="relative group overflow-hidden rounded-2xl aspect-square bg-slate-100 shadow-sm border border-slate-200">
+                        <img src="case01.jpg" alt="수술 사례 1" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center">
+                            <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 01</span>
+                            <p class="text-sm font-bold">수컷 말티즈 (2.5kg)</p>
+                            <p class="text-[10px] text-slate-300 mt-1">절개 크기: 약 0.5cm</p>
                         </div>
                     </div>
                     <!-- Photo 2 -->
-                    <div class="relative group overflow-hidden rounded-lg aspect-square bg-slate-100">
-                        <img src="https://picsum.photos/400/400?random=11" alt="수술 사례 2" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                        <div class="absolute inset-0 bg-black/50 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center text-white text-sm font-medium">
-                            암컷 말티즈 (3kg)
+                    <div class="relative group overflow-hidden rounded-2xl aspect-square bg-slate-100 shadow-sm border border-slate-200">
+                        <img src="case02.jpg" alt="수술 사례 2" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center">
+                            <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 02</span>
+                            <p class="text-sm font-bold">암컷 포메라니안 (2kg)</p>
+                            <p class="text-[10px] text-slate-300 mt-1">절개 크기: 약 0.8cm</p>
                         </div>
                     </div>
                     <!-- Photo 3 -->
-                    <div class="relative group overflow-hidden rounded-lg aspect-square bg-slate-100">
-                        <img src="https://picsum.photos/400/400?random=12" alt="수술 사례 3" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                        <div class="absolute inset-0 bg-black/50 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center text-white text-sm font-medium">
-                            암컷 비숑 (5kg)
+                    <div class="relative group overflow-hidden rounded-2xl aspect-square bg-slate-100 shadow-sm border border-slate-200">
+                        <img src="case03.jpg" alt="수술 사례 3" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center">
+                            <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 03</span>
+                            <p class="text-sm font-bold">암컷 코리안숏헤어 (3.2kg)</p>
+                            <p class="text-[10px] text-slate-300 mt-1">절개 크기: 약 0.7cm</p>
                         </div>
                     </div>
                     <!-- Photo 4 -->
-                    <div class="relative group overflow-hidden rounded-lg aspect-square bg-slate-100">
-                        <img src="https://picsum.photos/400/400?random=13" alt="수술 사례 4" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                        <div class="absolute inset-0 bg-black/50 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center text-white text-sm font-medium">
-                            수컷 푸들 (4kg)
+                    <div class="relative group overflow-hidden rounded-2xl aspect-square bg-slate-100 shadow-sm border border-slate-200">
+                        <img src="case04.jpg" alt="수술 사례 4" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center">
+                            <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 04</span>
+                            <p class="text-sm font-bold">수컷 비숑 (4.5kg)</p>
+                            <p class="text-[10px] text-slate-300 mt-1">절개 크기: 약 0.5cm</p>
                         </div>
                     </div>
                 </div>
-                <div class="mt-8 text-center text-xs text-slate-500">
-                    * 의료법 준수를 위해 수술 부위 상세 사진은 내원 상담 시 확인 가능합니다.
+
+                <div class="mt-16 bg-slate-50 p-8 rounded-3xl border border-slate-200">
+                    <div class="flex items-center gap-3 mb-4">
+                        <i data-lucide="info" class="w-6 h-6 text-amber-600"></i>
+                        <h3 class="text-lg font-bold text-slate-900">상세 사진 안내</h3>
+                    </div>
+                    <p class="text-slate-600 text-sm leading-relaxed">
+                        의료법 준수를 위해 수술 부위의 구체적인 전/후 비교 상세 사진은 <strong>병원 내원 시 상담실에서 직접 확인</strong>하실 수 있습니다.<br/>
+                        참좋은동물병원은 보호자님의 알 권리를 존중하며, 수술의 투명성을 위해 모든 과정과 결과를 정직하게 공유해 드립니다.
+                    </p>
                 </div>
             </div>
         </section>
